ILP Tracking: improved tests