@@ -7,6 +7,7 @@ import org.slf4j.LoggerFactory;
 
 import java.util.*;
 import java.util.function.ToDoubleFunction;
+import java.util.stream.Collectors;
 
 import static org.junit.Assert.*;
 
@@ -17,25 +18,26 @@ public class PredictionGraphTest {
     @Test
     public void testGapSimplificationAndLM() {
 
-        PredictionGraph<MockObj> pg = new PredictionGraph<>();
-        pg.config = new PredictionGraph.Configuration();
-        pg.config.distancePower = 2;
-        pg.config.gapPower = 2;
-        pg.config.linkDistTolerance = 5;
+
+        PredictionGraph.Configuration config = new PredictionGraph.Configuration();
+        config.distancePower = 2;
+        config.gapPower = 2;
+        config.linkDistTolerance = 5;
+        PredictionGraph<MockObj> pg = new PredictionGraph<>(config);
 
         // frame -> objects
         Map<Integer, Collection<MockObj>> objects = new HashMap<>();
 
         // helper
-        add(objects, new MockObj(1, 1));
-        add(objects, new MockObj(2, 2));
-        add(objects, new MockObj(3, 3));
-        add(objects, new MockObj(4, 4));
+        add(objects, new MockObj(1, 0));
+        add(objects, new MockObj(2, 0));
+        add(objects, new MockObj(3, 0));
+        add(objects, new MockObj(4, 0));
 
-        // empty contours
+        // singleton contours
         Map<MockObj, Set<Voxel>> contour = new HashMap<>();
         for (Collection<MockObj> c : objects.values())
-            for (MockObj o : c) contour.put(o, Collections.<Voxel>emptySet());
+            for (MockObj o : c) contour.put(o, Collections.singleton(o.getCenter().asVoxel()));
 
         // quality
         ToDoubleFunction<MockObj> quality = new ToDoubleFunction<MockObj>() {
@@ -50,19 +52,14 @@ public class PredictionGraphTest {
         // LM arrays: lm[gap][3] : [SINGLE, MULT, NULL]
         double[][] lm = new double[][] {
                 {0.8, 0.1, 0.1},
-                {0.8, 0.1, 0.1},
-                {0.8, 0.1, 0.1}
+                {0.8, 0., 0.2},
+                {0.8, 0., 0.2}
         };
-        PredictionGraph.MockFunction LMFW = new PredictionGraph.MockFunction(lm);
-        PredictionGraph.MockFunction LMBW = new PredictionGraph.MockFunction(lm);
 
         // Add edges for gap=1..3
         for (int gap = 1; gap <= 3; gap++) {
-            pg.addEdges(objects, quality, zero, zero, zero, zero, LMFW, LMBW, contour, gap);
+            pg.addEdges(objects, quality, zero, zero, zero, zero, o -> lm, o -> lm, contour, gap);
         }
-
-        log.info("==== GRAPH BEFORE SIMPLIFICATION ====");
-        dumpGraph(pg);
 
         // Built-in simplified gap removal is inside addEdges().
         // After adding all gap edges, gap>1 edges should be removed if simpler consecutive paths exist.
@@ -92,11 +89,11 @@ public class PredictionGraphTest {
 
     @Test
     public void testSubPathsAndIsolatedPath() {
-        PredictionGraph<MockObj> pg = new PredictionGraph<>();
-        pg.config = new PredictionGraph.Configuration();
-        pg.config.distancePower = 2;
-        pg.config.gapPower = 1;
-        pg.config.linkDistTolerance = 5;
+        PredictionGraph.Configuration config = new PredictionGraph.Configuration();
+        config.distancePower = 2;
+        config.gapPower = 1;
+        config.linkDistTolerance = 5;
+        PredictionGraph<MockObj> pg = new PredictionGraph<>(config);
 
         // Build a simple chain + one branch:
         // 1→2→4
@@ -104,10 +101,10 @@ public class PredictionGraphTest {
         // Both are valid subpaths from 1→4
         Map<Integer, Collection<MockObj>> objects = new HashMap<>();
 
-        MockObj v1 = new MockObj(1, 1);
-        MockObj v2 = new MockObj(2, 2);
-        MockObj v3 = new MockObj(2, 3);
-        MockObj v4 = new MockObj(4, 4);
+        MockObj v1 = new MockObj(1, 0);
+        MockObj v2 = new MockObj(2, 0);
+        MockObj v3 = new MockObj(3, 0);
+        MockObj v4 = new MockObj(4, 0);
 
         add(objects, v1);
         add(objects, v2);
@@ -115,34 +112,36 @@ public class PredictionGraphTest {
         add(objects, v4);
 
         Map<MockObj, Set<Voxel>> contour = new HashMap<>();
-        contour.put(v1, Collections.<Voxel>emptySet());
-        contour.put(v2, Collections.<Voxel>emptySet());
-        contour.put(v3, Collections.<Voxel>emptySet());
-        contour.put(v4, Collections.<Voxel>emptySet());
+        contour.put(v1, Collections.singleton(v1.getCenter().asVoxel()));
+        contour.put(v2, Collections.singleton(v2.getCenter().asVoxel()));
+        contour.put(v3, Collections.singleton(v3.getCenter().asVoxel()));
+        contour.put(v4, Collections.singleton(v4.getCenter().asVoxel()));
 
         // quality
-        ToDoubleFunction<MockObj> Q = new ToDoubleFunction<MockObj>() {
-            public double applyAsDouble(MockObj o) { return 1.0; }
-        };
-        ToDoubleFunction<MockObj> Z = new ToDoubleFunction<MockObj>() {
-            public double applyAsDouble(MockObj o) { return 0.0; }
-        };
+        ToDoubleFunction<MockObj> Q = o -> 1.0;
+        ToDoubleFunction<MockObj> Z = o -> 0.0;
 
         double[][] lm = new double[][] {
                 {0.8, 0.1, 0.1},
-                {0.8, 0.1, 0.1},
-                {0.8, 0.1, 0.1}
+                {0.8, 0., 0.2},
+                {0.8, 0., 0.2}
         };
-        PredictionGraph.MockFunction LMFW = new PredictionGraph.MockFunction(lm);
-        PredictionGraph.MockFunction LMBW = new PredictionGraph.MockFunction(lm);
 
         // Add edges for gap=1
-        pg.addEdges(objects, Q, Z, Z, Z, Z, LMFW, LMBW, contour, 1);
+        pg.addEdges(objects, Q, Z, Z, Z, Z, o -> lm, o -> lm, contour, 1);
 
         // Now manually add a gap edge 1→4
         PredictionGraph.Vertex<MockObj> V1 = pg.vertexMap.get(v1);
+        PredictionGraph.Vertex<MockObj> V2 = pg.vertexMap.get(v2);
+        PredictionGraph.Vertex<MockObj> V3 = pg.vertexMap.get(v4);
         PredictionGraph.Vertex<MockObj> V4 = pg.vertexMap.get(v4);
+        assertNotNull(V1);
+        assertNotNull(V2);
+        assertNotNull(V3);
+        assertNotNull(V4);
         pg.graph.addEdge(V1, V4).setConfidence(0.5);
+        pg.graph.addEdge(V1, V3).setConfidence(0.5);
+        pg.graph.addEdge(V2, V4).setConfidence(0.5);
         pg.graph.setEdgeWeight(pg.graph.getEdge(V1, V4), 0.5);
 
         log.info("==== EDGES BEFORE DFS ====");
@@ -150,13 +149,13 @@ public class PredictionGraphTest {
 
         // test subpaths
         java.util.List<java.util.List<PredictionGraph.Edge>> paths =
-                pg.findAllSubPaths(V1, V4).toList();
+                pg.findAllPaths(V1, V4).collect(Collectors.toList());
 
         log.info("Found {} subpaths from 1→4", paths.size());
         for (List<PredictionGraph.Edge> p : paths)
-            log.info("PATH: {}", p);
+            log.info("PATH: {}", dumpPath(p, pg));
 
-        assertEquals(2, paths.size()); // 1→2→4 and 1→3→4
+        assertEquals(2, paths.size()); // 1→2→3→4 and 1→2→4 and 1→3→4
 
         // Test isolated-path predicate
         for (List<PredictionGraph.Edge> p : paths) {
@@ -179,6 +178,12 @@ public class PredictionGraphTest {
         list.add(o);
     }
 
+    private boolean hasEdge(PredictionGraph<MockObj> pg, MockObj o1, MockObj o2) {
+        if (pg.vertexMap.get(o1)==null || pg.vertexMap.get(o2)==null) return false;
+        return pg.verticesOf(pg.vertexMap.get(o1), true).map(v->v.o).anyMatch(o -> o.equals(o2)) ||
+                pg.verticesOf(pg.vertexMap.get(o1), false).map(v->v.o).anyMatch(o -> o.equals(o2)) ;
+    }
+
     private boolean hasEdge(PredictionGraph<MockObj> pg, int f1, int f2) {
         for (PredictionGraph.Edge e : pg.graph.edgeSet()) {
             PredictionGraph.Vertex<MockObj> s = pg.graph.getEdgeSource(e);
@@ -197,5 +202,18 @@ public class PredictionGraphTest {
             log.info("{} → {}  gap={}  weight={}",
                     s.o, t.o, e.gap(), pg.graph.getEdgeWeight(e));
         }
+    }
+
+    private String dumpPath(List<PredictionGraph.Edge> path, PredictionGraph<MockObj> pg) {
+        StringBuilder sb = new StringBuilder();
+        sb.append("[");
+        if (!path.isEmpty()) {
+            sb.append(pg.graph.getEdgeSource(path.get(0)).o);
+            for (PredictionGraph.Edge e: path) {
+                sb.append("->").append(pg.graph.getEdgeTarget(e).o);
+            }
+        }
+        sb.append("]");
+        return sb.toString();
     }
 }
